Reworked the housing endpoints