@@ -2,11 +2,12 @@ package com.sazark.kykbecayis.housing.dorm;
 
 import com.sazark.kykbecayis.core.mapper.DormMapper;
 import com.sazark.kykbecayis.housing.dto.DormDto;
-import jakarta.persistence.criteria.Predicate;
 import org.springframework.stereotype.Service;
 
-import java.util.ArrayList;
+import java.time.Instant;
 import java.util.List;
+import java.util.Objects;
+import java.util.stream.Collectors;
 
 @Service
 public class DormService {
@@ -44,19 +45,7 @@ public class DormService {
     public List<DormDto> findAll() {
         return dormRepository.findAll().stream()
                 .map(dormMapper::toDTO)
-                .toList();
-    }
-
-    public List<DormDto> filterDorms(String type, String city, String name) {
-        return dormRepository.findAll((root, query, cb) -> {
-                    var predicates = new ArrayList<Predicate>();
-                    if (type != null) predicates.add(cb.equal(root.get("type"), type));
-                    if (city != null) predicates.add(cb.equal(root.get("city"), city));
-                    if (name != null) predicates.add(cb.like(cb.lower(root.get("name")), "%" + name.toLowerCase() + "%"));
-                    return cb.and(predicates.toArray(new Predicate[0]));
-                }).stream()
-                .map(dormMapper::toDTO)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public boolean delete(Long id) {
@@ -65,5 +54,10 @@ public class DormService {
         }
         dormRepository.deleteById(id);
         return true;
+    }
+
+    public Instant findLastModifiedTime() {
+        Instant lastModifiedTime = dormRepository.findLastModifiedTime();
+        return Objects.requireNonNullElse(lastModifiedTime, Instant.EPOCH);
     }
 }
